--- a/Fellow-Students/styles/friends.css
+++ b/Fellow-Students/styles/friends.css
@@ -36,12 +36,6 @@
     transition: 0.5s;
 }
 
-.left-header_current-elem {
-     text-shadow: 2px 2px 3px rgba(0,0,0,0.5);
-     text-decoration-line: underline;
-     font-style: italic;
- }
-
 .simple-block {
     display: flex;
     justify-content: center;
@@ -107,13 +101,13 @@
     width: 100%;
 }
 
-.settings {
+.user-settings {
     display: flex;
     align-items: center;
     justify-items: center;
 }
 
-.settings__text {
+.user-settings__text {
     margin: auto;
 }
 
