--- a/Fellow-Students/styles/settings.css
+++ b/Fellow-Students/styles/settings.css
@@ -139,9 +139,23 @@
 
 .main {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 20px;
     background-color: #37b391;
+}
+
+.main__settings {
+    margin: 50px;
+}
+
+.settings-block {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.friends-paragraph {
+    font-size: 20px;
 }
 
 .footer {
